fix(layout): header overflow fix

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -119,6 +119,10 @@ h3 {
 
 /* Header */
 
+header {
+  overflow: hidden;
+}
+
 .header-section {
   display: flex;
   flex-direction: column;
